fixed the nav bar so that it is more evenly positioned and changed the nav items from an unordered list to a div as well as the nav items containers wrapped in divs rather than li's.

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,77 +1,86 @@
 .navbar {
-    position: fixed;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.85);
-    padding-top: 1.5%;
-    box-shadow: 0 0 3px -1px black;
-    z-index: 10;
-}
-.nav-title {
-    display: inline-block;
-    margin-left: 0;
-    margin-right: 5%;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.85);
+  box-shadow: 0 0 3px -1px black;
+  z-index: 10;
+  border: 1px solid black;
 }
 
-.nav-title>.nav-item {
-    text-decoration: none;
-    color: black;
+h5.nav-title {
+  margin: 1% 0;
+}
+
+.nav-title {
+}
+
+.nav-title-container {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-title > .nav-item {
+  text-decoration: none;
+  color: black;
 }
 
 .nav-title:hover {
-    cursor: pointer;
-    color: white;
+  cursor: pointer;
+  color: white;
 }
 
 .nav-items-container {
-    display: block;
-    width: 60%;
-    margin-left: 5%;
-    float: right;
+  display: flex;
+  width: 50%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav-item {
-    display: inline-block;
-    margin: 0 10px;
-    border: 2px solid black;
-    position: relative;
-    border-radius: 10px;
-    transition: all 1s;
-    overflow: hidden;
-    padding: 5px 10px;
-    z-index: 1;
+  display: block;
+  position: relative;
+  margin: 0 10px;
+  border: 2px solid black;
+  position: relative;
+  border-radius: 10px;
+  transition: all 1s;
+  overflow: hidden;
+  padding: 5px 10px;
+  z-index: 1;
 }
 
 .nav-links {
-    text-decoration: none; 
-    color: black;
-    
+  text-decoration: none;
+  color: black;
 }
 
-.nav-links:hover, .nav-item:hover {
-    color: white;
+.nav-links:hover,
+.nav-item:hover {
+  color: white;
 }
 
 .nav-item::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    transition: all 400ms;
-    z-index: -1;
-    transform: translateY(100%);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transition: all 400ms;
+  z-index: -1;
+  transform: translateY(100%);
 }
-  
+
 .nav-item:hover::before {
-    transform: translateY(0);
+  transform: translateY(0);
 }
-  
